# VOTF-CPP

./: CMakeLists.txt  README.md
files/: Attack.cpp  Entity.cpp  Heroes.cpp  main.cpp  overworld.cpp  prints.cpp
header/: Attack.h  Entity.h  Heroes.h  overworld.h  prints.h
